[gd_scene load_steps=3 format=3 uid="uid://chf88c35ic18x"]

[ext_resource type="Script" uid="uid://dv1a5ljh2q1qo" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://cnxnmrppall31" path="res://scripts/temperature_label.gd" id="2_0wfyh"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o5qli")

[node name="Resources" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 45.0
offset_right = -42.0
offset_bottom = 258.0

[node name="EnergyLabel" type="RichTextLabel" parent="Resources"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 24
text = "Energy: "
vertical_alignment = 1

[node name="TemperatureLabel" type="RichTextLabel" parent="Resources"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 25
text = "Temperature: "
vertical_alignment = 1
script = ExtResource("2_0wfyh")

[node name="BatteryLabel" type="RichTextLabel" parent="Resources"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/normal_font_size = 25
text = "Battery:"
vertical_alignment = 1

[node name="ChargeButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.38000003
anchor_top = 0.771
anchor_right = 0.59800005
anchor_bottom = 0.897
offset_left = 0.5999756
offset_top = -0.11999512
offset_right = -0.44006348
offset_bottom = 0.15997314
grow_horizontal = 2
grow_vertical = 2
text = "Charge"

[node name="ExploreButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04718752
anchor_top = 0.84738886
anchor_right = 0.20581254
anchor_bottom = 0.92200005
offset_left = 0.5999756
offset_top = -0.11999512
offset_right = -0.44006348
offset_bottom = 0.15997314
grow_horizontal = 2
grow_vertical = 2
text = "Explore"
metadata/_edit_use_anchors_ = true

[node name="CoolDownButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6198438
anchor_top = 0.7112778
anchor_right = 0.7050313
anchor_bottom = 0.8136667
offset_left = 0.5999756
offset_top = -0.11999512
offset_right = -0.44006348
offset_bottom = 0.15997314
grow_horizontal = 2
grow_vertical = 2
text = "Cool Down"
metadata/_edit_use_anchors_ = true

[node name="EnergyToBatteryButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.06281252
anchor_top = 0.47794443
anchor_right = 0.2175313
anchor_bottom = 0.52061117
offset_left = 0.5999756
offset_top = -0.11999512
offset_right = -0.44006348
offset_bottom = 0.15997314
grow_horizontal = 2
grow_vertical = 2
text = "Transform to battery"
metadata/_edit_use_anchors_ = true

[node name="ResetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.93653125
anchor_top = 0.9188889
anchor_right = 0.93653125
anchor_bottom = 0.9188889
offset_left = -51.760002
offset_top = -36.600037
offset_right = 52.239998
offset_bottom = 36.65399
grow_horizontal = 2
grow_vertical = 2
text = "reset"

[connection signal="button_down" from="ChargeButton" to="." method="_on_charge_button_down"]
[connection signal="button_up" from="ChargeButton" to="." method="_on_charge_button_up"]
[connection signal="pressed" from="ExploreButton" to="." method="_on_explore_button_pressed"]
[connection signal="button_down" from="CoolDownButton" to="." method="_on_cool_down_button_down"]
[connection signal="button_up" from="CoolDownButton" to="." method="_on_cool_down_button_up"]
[connection signal="pressed" from="EnergyToBatteryButton" to="." method="_on_energy_to_battery_button_pressed"]
